Updated JavaDoc and minor code cleanup